<resources>
    <string name="app_name">KTU Chat</string>
    <string name="sign_in_btn">Google Sign-in </string>
    <string name="show_info_btn">Show info</string>
    <string name="sign_out_btn">Sign out</string>
    <string name="sign_up_btn">Don\'t have an account? Sign Up</string>
    <string name="log_in_btn">Log In</string>
    <string name="password_btn">Password</string>
    <string name="email_address_btn">Email Address</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="tab_text_1">Chats</string>
    <string name="tab_text_2">Status</string>
    <string name="tab_text_3">Contacts</string>
    <string name="hostname">http://192.168.1.102</string>
    <string name="port">8000</string>
</resources>