<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/blue_ultra_dark"
    tools:context=".LoginActivity">

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_sign_in"
        style="@style/Widget.AppCompat.Button.ButtonBar.AlertDialog"
        android:layout_width="149dp"
        android:layout_height="44dp"
        android:layout_marginStart="80dp"
        android:layout_marginTop="558dp"
        android:background="@color/white"
        android:text="@string/sign_in_btn"
        android:textColor="#E34242"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_sign_up_email_pass"
        style="@style/Widget.AppCompat.Button.Borderless.Colored"
        android:layout_width="171dp"
        android:layout_height="34dp"
        android:layout_marginStart="80dp"
        android:layout_marginTop="606dp"
        android:padding="0dp"
        android:text="@string/sign_up_btn"
        android:textAlignment="textStart"
        android:textAllCaps="false"
        android:textSize="10sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_login_email_pass"
        android:layout_width="149dp"
        android:layout_height="60dp"
        android:layout_marginStart="80dp"
        android:layout_marginTop="490dp"
        android:text="@string/log_in_btn"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/text_input_password"
        android:layout_width="259dp"
        android:layout_height="83dp"
        android:layout_marginStart="80dp"
        android:layout_marginTop="392dp"
        android:background="@android:color/transparent"
        app:boxBackgroundColor="@android:color/transparent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edit_text_password"
            android:layout_width="241dp"
            android:layout_height="50dp"
            android:ems="10"
            android:hint="@string/password_btn"
            android:inputType="textPassword" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/text_input_email"
        android:layout_width="262dp"
        android:layout_height="92dp"
        android:layout_marginStart="80dp"
        android:layout_marginTop="300dp"
        android:background="@android:color/transparent"
        app:boxBackgroundColor="@android:color/transparent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edit_text_email"
            android:layout_width="241dp"
            android:layout_height="50dp"
            android:ems="10"
            android:hint="@string/email_address_btn"
            android:inputType="textEmailAddress" />
    </com.google.android.material.textfield.TextInputLayout>

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="223dp"
        android:layout_height="187dp"
        android:layout_marginStart="84dp"
        android:layout_marginTop="24dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ktu_logo" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="763dp"
        android:layout_height="913dp"
        android:layout_marginStart="56dp"
        android:layout_marginTop="536dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_circle_drawable" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="56dp"
        android:layout_marginTop="232dp"
        android:text="Welcome to KTU Chat!"
        android:textSize="28sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>